<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="24dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_new_order_item_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_new_order_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_new_order_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_new_order_item_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cancel"
            android:textColor="@color/design_default_color_on_primary"
            android:text="@string/cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_new_order_item_add"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:textColor="@color/design_default_color_on_primary"
            android:text="@string/add"/>

    </LinearLayout>


</LinearLayout>