<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/fragment_profile_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/fragment_profile_picture"
                android:contentDescription="@string/profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:id="@+id/fragment_profile_user_name"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/phone">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:id="@+id/fragment_profile_phone"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:drawablePadding="5dp"
            android:id="@+id/fragment_profile_rating"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_star_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/fragment_profile_taken_orders"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taken_orders"
            android:background="@color/purple_500"
            android:textColor="@color/design_default_color_on_primary"
            android:paddingHorizontal="24dp"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/fragment_profile_taken_deliveries"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taken_deliveries"
            android:background="@color/purple_500"
            android:textColor="@color/design_default_color_on_primary"
            android:paddingHorizontal="24dp"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/fragment_profile_taken_cares"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taken_cares"
            android:background="@color/purple_500"
            android:textColor="@color/design_default_color_on_primary"
            android:paddingHorizontal="24dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="gone"
        android:id="@+id/fragment_profile_login"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/purple_500"
        android:textColor="@color/design_default_color_on_primary"
        android:paddingHorizontal="24dp"
        android:layout_gravity="center"/>

</FrameLayout>