<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:visibility="visible"
            android:id="@+id/activity_view_order_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_margin="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_view_order_title"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <View
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_by"/>
                    <TextView
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:id="@+id/activity_view_order_creator"/>
                </LinearLayout>

                <TextView
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_view_order_description"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/order_list"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/activity_view_order_add_item"
                        android:background="@color/design_default_color_primary"
                        android:textColor="@color/design_default_color_on_primary"
                        android:text="@string/add"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/activity_view_order_items"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginTop="24dp"
                    android:id="@+id/activity_view_order_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/join"
                    android:textColor="@color/design_default_color_on_primary"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginTop="24dp"
                    android:id="@+id/activity_view_order_leave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/leave"
                    android:textColor="@color/design_default_color_on_primary"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginTop="24dp"
                    android:id="@+id/activity_view_order_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/close"
                    android:textColor="@color/design_default_color_on_primary"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/activity_view_order_closed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textSize="18sp"
                    android:text="@string/closed"/>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/activity_view_order_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>